Optimize JS, fix project closer button on mobile

--- a/css/index.css
+++ b/css/index.css
@@ -886,6 +886,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+  z-index: 100;
 }
 
 .close-project > i {
